MET-5152 Fix rest tests